--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,33 +10,42 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # Step 3: Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # Step 4: Build and Push Docker Image
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/flask-mysql-k8s:latest
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/flask-mysql-k8s:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/flask-mysql-k8s:${{ github.sha }}
 
+      # Step 5: Set up kubectl
       - name: Set up kubectl
         uses: azure/setup-kubectl@v4
 
+      # Step 6: Configure kubeconfig for cluster access
       - name: Configure Kubeconfig
         run: |
           echo "${{ secrets.KUBECONFIG_DATA }}" | base64 --decode > kubeconfig.yaml
           export KUBECONFIG=kubeconfig.yaml
 
+      # Step 7: Deploy to Kubernetes
       - name: Deploy to Kubernetes
         run: |
           kubectl apply -f k8s/
