--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: sshhubhamm/flask-mysql-k8s:latest
+          tags: shuubham/flask-mysql-k8s:latest   # ✅ fixed username here
 
       - name: Set up kubectl
         uses: azure/setup-kubectl@v4
