Update Docker action and disable Kubernetes deployment
Updated Docker Buildx action version and commented out Kubernetes deployment steps.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,34 +10,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Checkout your code
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # 2️⃣ Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # 3️⃣ Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # 4️⃣ Build and Push Docker Image
       - name: Build and Push Docker Image
-        uses: docker/build-push-action@v6
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: shuubham/flask-mysql-k8s:latest   # ✅ fixed username here
+          tags: shuubham/flask-mysql-k8s:latest
 
-      - name: Set up kubectl
-        uses: azure/setup-kubectl@v4
+      # 5️⃣ (Optional) Deploy to Kubernetes – disabled to avoid validation errors
+      # Uncomment this section only when your cluster is reachable from GitHub Actions
 
-      - name: Configure Kubeconfig
-        run: |
-          echo "${{ secrets.KUBECONFIG_DATA }}" | base64 --decode > kubeconfig.yaml
-          export KUBECONFIG=kubeconfig.yaml
+      # - name: Configure Kubeconfig
+      #   run: |
+      #     mkdir -p ~/.kube
+      #     echo "${{ secrets.KUBE_CONFIG }}" > ~/.kube/config
 
-      - name: Deploy to Kubernetes
-        run: |
-          kubectl apply -f k8s/
-          kubectl rollout status deployment/flask-deployment
+      # - name: Deploy to Kubernetes
+      #   run: |
+      #     kubectl apply -f k8s/
+      #     kubectl rollout status deployment/flask-deployment
