--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,14 +14,25 @@ services:
     networks:
       - flasknet
 
-  flask:
-    build: .
-    container_name: flask-app
+  backend:
+    build: ./backend
+    container_name: flask-backend
     restart: always
     ports:
       - "5000:5000"
     depends_on:
       - mysql
+    networks:
+      - flasknet
+
+  frontend:
+    build: ./frontend
+    container_name: react-frontend
+    restart: always
+    ports:
+      - "3000:80"
+    depends_on:
+      - backend
     networks:
       - flasknet
 
