--- a/flask-deployment.yaml
+++ b/flask-deployment.yaml
@@ -16,6 +16,15 @@ spec:
         - name: flask
           image: my-flask-app:latest
           imagePullPolicy: Never
+          env:
+            - name: MYSQL_HOST
+              value: mysql
+            - name: MYSQL_USER
+              value: root
+            - name: MYSQL_PASSWORD
+              value: root
+            - name: MYSQL_DB
+              value: flaskdb
           ports:
             - containerPort: 5000
 ---
